logs/archive/tools_error_2.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
warning: unused import: `HashSet`
  --> crates\ask_pete_core\src\lib.rs:11:33
   |
11 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `ask_pete_core` (lib) generated 1 warning (run `cargo fix --lib -p ask_pete_core` to apply 1 suggestion)
    Checking ask_pete_tools v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_tools)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_teacher`
 --> crates\ask_pete_tools\src\main.rs:1:5
  |
1 | use ask_pete_teacher::app::App;
  |     ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_teacher`
  |
  = help: if you wanted to use a crate named `ask_pete_teacher`, use `cargo add ask_pete_teacher` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `ask_pete_tools` (bin "frontend_bin") due to 1 previous error
